--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Menu Hamburguesa</title>
 </head>
 <body>
     <header>
-        <img src="../Argentina-Programa/L #YoProgramo Final/Imagenes varias/Alien - el titulo .png" alt="">
-            <nav>
-                <ul>
+        <img class="logo" src="https://picsum.photos/200/300" alt="">
+        <button id="abrir" class="abrir__menu"><i class="bi bi-list"></i></button>
+            <nav class="nav" id="nav">
+                <button id="cerrar"><i class="bi bi-x"></i></button>
+                <ul class="nav__list">
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Quienes Somos</a></li>
                     <li><a href="#">Servicios</a></li>
